# GammaGammaDistribution

./: .gitignore  CMakeLists.txt  README.md  config.cfg
include/: FitManager.h  Fitting.h  GatingAndFitting.h  GenerateDistribution.h  InputManager.h  Inputs.h
src/: Fitting.cpp  GatingAndFitting.cpp  GenerateDistribution.cpp  InputManager.cpp  Inputs.cpp
